--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Boolando</title>
 </head>
 
 <body>
-  
+
+  <header class="justify-content-around">
+    <div class="tl-menù ">
+      <p class="p-10">Donna</p>
+      <p class="p-10">Uomo</p>
+      <p class="p-10">Bambini</p>
+    </div>
+
+    <div class="t-menù">
+      <img src="assets/img/boolean-logo.png" alt="logo" class="justify-content-center">
+    </div>
+
+    <div class="tr-menù">
+      <i class="fa-regular fa-user p-10"></i>
+      <i class="fa-regular fa-heart p-10"></i>
+      <i class="fa-solid fa-bag-shopping p-10"></i>
+    </div>
+
+  </header>
+
+  <main>
+
+
+  </main>
+
 </body>
+
 </html>
