--- a/index.html
+++ b/index.html
@@ -33,8 +33,36 @@
   </header>
 
   <main>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-33">
+          <div class="card">
+            <img src="assets/img/1.webp" alt="levis-front" class="front-image">
+            <img src="assets/img/1b.webp" alt="levis-back" class="back-image">
+
+          </div>
+        </div>
+
+        <div class="col-33">
+          <div class="card">
+            <img src="assets/img/2.webp" alt="guess-front" class="front-image">
+            <img src="assets/img/2b.webp" alt="guess-back" class="back-image">
+
+          </div>
+        </div>
+
+        <div class="col-33">
+          <div class="card">
+            <img src="assets/img/3.webp" alt="levis-front" class="front-image">
+            <img src="assets/img/3b.webp" alt="levis-back" class="back-image">
+          </div>
+        </div>
 
 
+
+
+      </div>
+    </div>
   </main>
 
 </body>
