--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main>
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row">
         <div class="col-33">
           <div class="card">
             <img src="assets/img/1.webp" alt="levis-front" class="front-image">
