[UPD] cards-complete

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
 
   <main>
-    <div class="container">
+    <div class="container pt-150">
       <div class="row">
         <div class="col-33">
           <div class="card">
@@ -53,17 +53,41 @@
 
         <div class="col-33">
           <div class="card">
-            <img src="assets/img/3.webp" alt="levis-front" class="front-image">
-            <img src="assets/img/3b.webp" alt="levis-back" class="back-image">
+            <img src="assets/img/3.webp" alt="afro-front" class="front-image">
+            <img src="assets/img/3b.webp" alt="afro-back" class="back-image">
           </div>
         </div>
 
+        <div class="col-33">
+          <div class="card">
+            <img src="assets/img/4.webp" alt="levis-black-front" class="front-image">
+            <img src="assets/img/4b.webp" alt="levis-black-back" class="back-image">
+          </div>
+        </div>
+
+        <div class="col-33">
+          <div class="card">
+            <img src="assets/img/5.webp" alt="dress-front" class="front-image">
+            <img src="assets/img/5b.webp" alt="dress-back" class="back-image">
+          </div>
+        </div>
+
+        <div class="col-33">
+          <div class="card">
+            <img src="assets/img/6.webp" alt="pullover-front" class="front-image">
+            <img src="assets/img/6b.webp" alt="pullover-back" class="back-image">
+          </div>
+        </div>
 
 
 
       </div>
     </div>
   </main>
+
+  <footer>
+    
+  </footer>
 
 </body>
 
