[UPD] heart-emoji

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="card">
             <img src="assets/img/1.webp" alt="levis-front" class="front-image">
             <img src="assets/img/1b.webp" alt="levis-back" class="back-image">
-
+            <i class="fa-solid fa-heart bg-white top-100 right-0"></i>
           </div>
         </div>
 
@@ -47,7 +47,6 @@
           <div class="card">
             <img src="assets/img/2.webp" alt="guess-front" class="front-image">
             <img src="assets/img/2b.webp" alt="guess-back" class="back-image">
-
           </div>
         </div>
 
@@ -86,7 +85,7 @@
   </main>
 
   <footer>
-    
+
   </footer>
 
 </body>
