--- a/index.html
+++ b/index.html
@@ -33,20 +33,27 @@
   </header>
 
   <main>
-    <div class="container pt-150">
+    <div class="container mt-150">
       <div class="row">
         <div class="col-33">
           <div class="card">
             <img src="assets/img/1.webp" alt="levis-front" class="front-image">
             <img src="assets/img/1b.webp" alt="levis-back" class="back-image">
-            <i class="fa-solid fa-heart bg-white top-100 right-0"></i>
+            <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
+            <span class="bg-red position-absolute p-10 bottom-65 text-w">-50%</span>
+            <span class="bg-green position-absolute p-10 bottom-65 left-60 text-w">Sostenibilità</span>
           </div>
+          <p>Levi's</p>
+          <p>RELAXED FIT TEE UNISEX</p>
+          <p>14,99 € <span>29,99 €</span></p>
         </div>
 
         <div class="col-33">
           <div class="card">
             <img src="assets/img/2.webp" alt="guess-front" class="front-image">
             <img src="assets/img/2b.webp" alt="guess-back" class="back-image">
+            <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
+            <span class="bg-red position-absolute p-10 bottom-65 text-w">-30%</span>
           </div>
         </div>
 
@@ -54,6 +61,8 @@
           <div class="card">
             <img src="assets/img/3.webp" alt="afro-front" class="front-image">
             <img src="assets/img/3b.webp" alt="afro-back" class="back-image">
+            <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
+            <span class="bg-red position-absolute p-10 bottom-65 text-w">-50%</span>
           </div>
         </div>
 
@@ -61,6 +70,9 @@
           <div class="card">
             <img src="assets/img/4.webp" alt="levis-black-front" class="front-image">
             <img src="assets/img/4b.webp" alt="levis-black-back" class="back-image">
+            <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
+            <span class="bg-red position-absolute p-10 bottom-65 text-w">-50%</span>
+            <span class="bg-green position-absolute p-10 bottom-65 left-60 text-w">Sostenibilità</span>
           </div>
         </div>
 
@@ -68,6 +80,7 @@
           <div class="card">
             <img src="assets/img/5.webp" alt="dress-front" class="front-image">
             <img src="assets/img/5b.webp" alt="dress-back" class="back-image">
+            <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
           </div>
         </div>
 
@@ -75,6 +88,8 @@
           <div class="card">
             <img src="assets/img/6.webp" alt="pullover-front" class="front-image">
             <img src="assets/img/6b.webp" alt="pullover-back" class="back-image">
+            <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
+            <span class="bg-green position-absolute p-10 bottom-65 text-w">Sostenibilità</span>
           </div>
         </div>
 
