--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
             <span class="bg-red position-absolute p-10 bottom-65 text-w">-50%</span>
             <span class="bg-green position-absolute p-10 bottom-65 left-60 text-w">Sostenibilità</span>
+            <p>Levi's</p>
+            <p class="text-bold">RELAXED FIT TEE UNISEX</p>
+            <p>
+              <span class="text-red text-bold">14,99 € </span>
+              <s class="text-black">29,99 €</s>
+            </p>
           </div>
-          <p>Levi's</p>
-          <p>RELAXED FIT TEE UNISEX</p>
-          <p>14,99 € <span>29,99 €</span></p>
         </div>
 
         <div class="col-33">
@@ -54,6 +57,12 @@
             <img src="assets/img/2b.webp" alt="guess-back" class="back-image">
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
             <span class="bg-red position-absolute p-10 bottom-65 text-w">-30%</span>
+            <p>Guess</p>
+            <p class="text-bold">ROSES TEE</p>
+            <p>
+              <span class="text-red text-bold">14,99 € </span>
+              <s class="text-black">29,99 €</s>
+            </p>
           </div>
         </div>
 
@@ -63,6 +72,12 @@
             <img src="assets/img/3b.webp" alt="afro-back" class="back-image">
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
             <span class="bg-red position-absolute p-10 bottom-65 text-w">-50%</span>
+            <p>Come Zucchero Filato</p>
+            <p class="text-bold">VOGLIA DI COLORI PASTELLO</p>
+            <p>
+              <span class="text-red text-bold">129,99 € </span>
+              <s class="text-black">184,99 €</s>
+            </p>
           </div>
         </div>
 
@@ -73,6 +88,12 @@
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
             <span class="bg-red position-absolute p-10 bottom-65 text-w">-50%</span>
             <span class="bg-green position-absolute p-10 bottom-65 left-60 text-w">Sostenibilità</span>
+            <p>Levi's</p>
+            <p class="text-bold">TEE UNISEX</p>
+            <p>
+              <span class="text-red text-bold">14,99 € </span>
+              <s class="text-black">29,99 €</s>
+            </p>
           </div>
         </div>
 
@@ -81,6 +102,11 @@
             <img src="assets/img/5.webp" alt="dress-front" class="front-image">
             <img src="assets/img/5b.webp" alt="dress-back" class="back-image">
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
+            <p>Maya Deluxe</p>
+            <p class="text-bold">STRIP BODICE</p>
+            <p>
+              <span class="text-red text-bold">99,99 € </span>
+            </p>
           </div>
         </div>
 
@@ -90,6 +116,11 @@
             <img src="assets/img/6b.webp" alt="pullover-back" class="back-image">
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-0 p-25 size-40"></i>
             <span class="bg-green position-absolute p-10 bottom-65 text-w">Sostenibilità</span>
+            <p>Esprit</p>
+            <p class="text-bold">MAGLIONE - BLACK</p>
+            <p>
+              <span class="text-red text-bold">29,99 € </span>
+            </p>
           </div>
         </div>
 
