--- a/index.html
+++ b/index.html
@@ -130,9 +130,26 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="align-center justify-content-around">
+    <div class="bl-menù">
+      <p class="size-20 mb-10 text-bold">Boolando s.r.l.</p>
+      <div class="flex">
+        <p class="mr-15">Informazioni legali</p>
+        <p class="mr-15">Informativa sulla Privacy</p>
+        <p>Diritto di recesso</p>
+      </div>
+    </div>
+    <div class="br-menù">
+      <p class="text-bold mb-10">Tovaci anche su</p>
+      <i class="fa-brands fa-square-twitter size-20 pr-5"></i>
+      <i class="fa-brands fa-square-facebook size-20 pr-5"></i>
+      <i class="fa-brands fa-square-instagram size-20 pr-5"></i>
+      <i class="fa-brands fa-square-pinterest size-20 pr-5"></i>
+      <i class="fa-brands fa-square-youtube size-20"></i>
 
+    </div>
   </footer>
+  <hr>
 
 </body>
 
