--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-
+  <!-- HEADER -->
   <header class="justify-content-around">
-    <div class="tl-menù ">
-      <p class="p-10">Donna</p>
-      <p class="p-10">Uomo</p>
-      <p class="p-10">Bambini</p>
+    <div class="tl-menù">
+      <p class="p-10"></a>Donna</p>
+      <p class="p-10"></a>Uomo</p>
+      <p class="p-10"></a>Bambini</p>
     </div>
 
     <div class="t-menù">
@@ -29,16 +29,19 @@
       <i class="fa-regular fa-heart p-10"></i>
       <i class="fa-solid fa-bag-shopping p-10"></i>
     </div>
-
   </header>
 
+  <!-- MAIN -->
   <main>
     <div class="container mt-150">
       <div class="row">
+        <!-- CARD-1 -->
         <div class="col-33">
           <div class="card">
-            <img src="assets/img/1.webp" alt="levis-front" class="front-image">
-            <img src="assets/img/1b.webp" alt="levis-back" class="back-image">
+            <a href="pagina-di-dettaglio.html">
+              <img src="assets/img/1.webp" alt="levis-front" class="front-image">
+              <img src="assets/img/1b.webp" alt="levis-back" class="back-image">
+            </a>
             <i class="fa-solid fa-heart bg-white position-absolute top-10 right-10 p-25 size-40"></i>
             <span class="bg-red position-absolute p-10 bottom-125 text-w">-50%</span>
             <span class="bg-green position-absolute p-10 bottom-125 left-60 text-w">Sostenibilità</span>
@@ -51,7 +54,7 @@
           </div>
         </div>
 
-
+        <!-- CARD-2 -->
         <div class="col-33">
           <div class="card">
             <img src="assets/img/2.webp" alt="guess-front" class="front-image">
@@ -67,6 +70,7 @@
           </div>
         </div>
 
+        <!-- CARD-3 -->
         <div class="col-33">
           <div class="card">
             <img src="assets/img/3.webp" alt="afro-front" class="front-image">
@@ -82,6 +86,7 @@
           </div>
         </div>
 
+        <!-- CARD-4 -->
         <div class="col-33">
           <div class="card">
             <img src="assets/img/4.webp" alt="levis-black-front" class="front-image">
@@ -98,6 +103,7 @@
           </div>
         </div>
 
+        <!-- CARD-5 -->
         <div class="col-33">
           <div class="card">
             <img src="assets/img/5.webp" alt="dress-front" class="front-image">
@@ -111,6 +117,7 @@
           </div>
         </div>
 
+        <!-- CARD-6 -->
         <div class="col-33">
           <div class="card">
             <img src="assets/img/6.webp" alt="pullover-front" class="front-image">
@@ -126,11 +133,11 @@
         </div>
 
 
-
       </div>
     </div>
   </main>
 
+  <!-- FOOTER -->
   <footer class="align-center justify-content-around">
     <div class="bl-menù">
       <p class="size-20 mb-10 text-bold">Boolando s.r.l.</p>
